FIX: (order-summary) - Fix displaying problem for the images

--- a/order-summary/index.html
+++ b/order-summary/index.html
@@ -18,7 +18,7 @@
       <div class="order-summary">
         <header class="order-summary__header">
           <img
-            src="/images/illustration-hero.svg"
+            src="./images/illustration-hero.svg"
             alt="order summary header"
             class="header-image"
           />
@@ -31,7 +31,7 @@
           </p>
 
           <div class="order-summary__plan">
-            <img src="/images/icon-music.svg" alt="" class="plan__icon" />
+            <img src="./images/icon-music.svg" alt="" class="plan__icon" />
             <div class="plan__summary">
               <h3 class="plan__title">Annual Plan</h3>
               <span class="plan__price">$59.99/year</span>
