PROGRESS: (time-tracking) - Create Project Structure

--- a/time-tracking/index.html
+++ b/time-tracking/index.html
@@ -17,82 +17,134 @@
     <title>Time Tracking Dashboard</title>
   </head>
   <body>
-    Report for Jeremy Robson Daily Weekly Monthly Work 5hrs
-    <!-- daily -->
-    Previous - 7hrs
-    <!-- daily -->
-    32hrs
-    <!-- weekly -->
-    Previous - 36hrs
-    <!-- weekly -->
-    103hrs
-    <!-- monthly -->
-    Previous - 128hrs
-    <!-- monthly -->
+    <main>
+      <div class="card profile">
+        <div class="profile__header">
+          <img
+            src="./images/image-jeremy.png"
+            alt="Jeremy Robson"
+            class="profile__image"
+          />
+          <div class="profile__exp">
+            <span>Report for</span>
+            <h3 class="profile__name">Jeremy Robson</h3>
+          </div>
+        </div>
 
-    Play 1hr
-    <!-- daily -->
-    Previous - 2hrs
-    <!-- daily -->
-    10hrs
-    <!-- weekly -->
-    Previous - 8hrs
-    <!-- weekly -->
-    23hrs
-    <!-- monthly -->
-    Previous - 29hrs
-    <!-- monthly -->
+        <div class="profile__body">
+          <span class="preference">Daily</span>
+          <span class="preference active">Weekly</span>
+          <span class="preference">Monthly</span>
+        </div>
+      </div>
 
-    Study 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 7hrs
-    <!-- weekly -->
-    13hrs
-    <!-- monthly -->
-    Previous - 19hrs
-    <!-- monthly -->
+      <div class="card work">
+        <div class="card__header">
+          <img src="./images/icon-work.svg" alt="" class="header__image" />
+        </div>
+        <div class="card__body">
+          <div class="left">
+            <h3 class="card__title">Work</h3>
+            <h4 class="card__status">32hrs</h4>
+          </div>
+          <div class="right">
+            <img src="./images/icon-ellipsis.svg" alt="" class="card__option" />
+            <div class="card__last-week">
+              <span>Last Week - 36hrs</span>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    Exercise 1hr
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 5hrs
-    <!-- weekly -->
-    11hrs
-    <!-- monthly -->
-    Previous - 18hrs
-    <!-- monthly -->
+      <div class="card play">
+        <div class="card__header">
+          <img src="./images/icon-play.svg" alt="" class="header__image" />
+        </div>
+        <div class="card__body">
+          <div class="left">
+            <h3 class="card__title">Play</h3>
+            <h4 class="card__status">10hrs</h4>
+          </div>
+          <div class="right">
+            <img src="./images/icon-ellipsis.svg" alt="" class="card__option" />
+            <div class="card__last-week">
+              <span>Last Week - 8hrs</span>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    Social 1hr
-    <!-- daily -->
-    Previous - 3hrs
-    <!-- daily -->
-    5hrs
-    <!-- weekly -->
-    Previous - 10hrs
-    <!-- weekly -->
-    21hrs
-    <!-- monthly -->
-    Previous - 23hrs
-    <!-- monthly -->
+      <div class="card study">
+        <div class="card__header">
+          <img src="./images/icon-study.svg" alt="" class="header__image" />
+        </div>
+        <div class="card__body">
+          <div class="left">
+            <h3 class="card__title">Study</h3>
+            <h4 class="card__status">4hrs</h4>
+          </div>
+          <div class="right">
+            <img src="./images/icon-ellipsis.svg" alt="" class="card__option" />
+            <div class="card__last-week">
+              <span>Last Week - 7hrs</span>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    Self Care 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    2hrs
-    <!-- weekly -->
-    Previous - 2hrs
-    <!-- weekly -->
-    7hrs
-    <!-- monthly -->
-    Previous - 11hrs
-    <!-- monthly -->
+      <div class="card exercise">
+        <div class="card__header">
+          <img src="./images/icon-exercise.svg" alt="" class="header__image" />
+        </div>
+        <div class="card__body">
+          <div class="left">
+            <h3 class="card__title">Exersice</h3>
+            <h4 class="card__status">4hrs</h4>
+          </div>
+          <div class="right">
+            <img src="./images/icon-ellipsis.svg" alt="" class="card__option" />
+            <div class="card__last-week">
+              <span>Last Week - 5hrs</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card social">
+        <div class="card__header">
+          <img src="./images/icon-social.svg" alt="" class="header__image" />
+        </div>
+        <div class="card__body">
+          <div class="left">
+            <h3 class="card__title">Social</h3>
+            <h4 class="card__status">5hrs</h4>
+          </div>
+          <div class="right">
+            <img src="./images/icon-ellipsis.svg" alt="" class="card__option" />
+            <div class="card__last-week">
+              <span>Last Week - 10hrs</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card self-care">
+        <div class="card__header">
+          <img src="./images/icon-self-care.svg" alt="" class="header__image" />
+        </div>
+        <div class="card__body">
+          <div class="left">
+            <h3 class="card__title">Self Care</h3>
+            <h4 class="card__status">2hrs</h4>
+          </div>
+          <div class="right">
+            <img src="./images/icon-ellipsis.svg" alt="" class="card__option" />
+            <div class="card__last-week">
+              <span>Last Week - 2hrs</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
